<resources>
    <string name="app_name">Gasto Viagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de Quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_s_por_litro">KM\'s por Litro</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total será de:</string>
    <string name="Valor_total">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="validacao">Preencha todos os campos.</string>
    <string name="valorzero">A Autonomia deve ter uma valor maior que zero.</string>
</resources>