<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">
    
    <EditText
        android:id="@+id/edit_distancia"
        android:layout_width="match_parent"
        android:hint="@string/distancia"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/total_de_quilometros"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_preco"
        android:layout_width="match_parent"
        android:hint="@string/preco"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/preco_por_litro"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_autonomia"
        android:layout_width="match_parent"
        android:hint="@string/autonomia"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/km_s_por_litro"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/seu_gasto_total_sera_de"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/text_valor_total"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/Valor_total"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:textSize="20sp"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/calcular"/>

</LinearLayout>